components/policies/development/build-resources/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: fix-buildah-resources-for-remote-platforms
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
