components/policies/development/build-resources/.chainsaw-test/chainsaw-assert-failure-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: adjust-buildah-resources-for-remote-platforms
spec:
  failurePolicy: Ignore
